--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -18,8 +19,7 @@
           android:layout_marginBottom="10dp"
           android:layout_marginRight="58dp"
           android:layout_marginLeft="30dp"
-          android:background="@color/white"
-          >
+          android:background="@color/white">
 
           <ImageView
               android:layout_width="wrap_content"
@@ -28,8 +28,7 @@
               android:layout_marginTop="10dp"
               android:layout_marginBottom="14dp"
               android:layout_marginRight="18dp"
-              app:srcCompat="?android:attr/actionModeWebSearchDrawable"
-              />
+              app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -37,19 +36,59 @@
               android:layout_marginBottom="14dp"
               android:layout_marginTop="10dp"
               android:hint="Поиск"
-
-              />
+              android:background="@color/white"/>
 
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginLeft="20dp"
-
+              android:layout_marginLeft="200dp"
+              android:contentDescription="@string/info"
               app:srcCompat="@android:drawable/ic_menu_info_details" />
+
       </LinearLayout>
 
 
 
 
   </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/grey"              >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Top 10"
+            android:background="@drawable/rectngle"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginRight="18dp"
+            android:layout_marginBottom="17dp"
+
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Магазины"
+            android:background="@drawable/rectngle"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="17dp"
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Товары"
+            android:background="@drawable/rectngle"
+            android:layout_gravity="right"
+            android:layout_marginTop="17dp"
+            android:layout_marginRight="17dp"
+
+
+
+            />
+
+
+    </FrameLayout>
 </LinearLayout>
