--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="grey">#f7f8f8</color>
     <color name="white">#ffffff</color>
+    <color name="light_blue">#588ae9</color>
 </resources>
