--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/grey"
+      android:elevation="10dp"
       >
 
       <LinearLayout
@@ -38,15 +39,17 @@
               android:hint="Поиск"
               android:background="@color/white"/>
 
-          <ImageView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="200dp"
-              android:contentDescription="@string/info"
-              app:srcCompat="@android:drawable/ic_menu_info_details" />
-
       </LinearLayout>
 
+
+      <ImageView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="right"
+          android:layout_marginRight="30dp"
+          android:layout_marginTop="24dp"
+          android:contentDescription="@string/info"
+          app:srcCompat="@android:drawable/ic_menu_info_details" />
 
 
 
