--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="grey">#f7f8f8</color>
     <color name="white">#ffffff</color>
     <color name="light_blue">#588ae9</color>
+    <color name="light_white">#14ffffff</color>
 </resources>
