--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/list_picture_item"
     >
 <ImageView
+    android:id="@+id/top_recyclerView_image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     />
@@ -18,6 +19,7 @@
         >
 
         <TextView
+            android:id="@+id/top_recyclerView_Text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Вода"/>
