--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,7 +104,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="190dp">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/top_horizontal_recycler_view"
