--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="235dp"
     android:layout_height="165dp"
     android:elevation="7dp"
     android:background="@drawable/list_picture_item"
+    android:orientation="vertical"
     >
-<ImageView
-    android:id="@+id/top_recyclerView_image"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
+    <ImageView
+        android:id="@+id/top_recyclerView_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="232dp"
         android:layout_height="52dp"
         android:background="@color/light_white"
+        android:visibility="visible"
+        android:elevation="10dp"
+        android:layout_gravity="bottom"
         >
 
         <TextView
             android:id="@+id/top_recyclerView_Text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Вода"/>
+            android:layout_width="232dp"
+            android:layout_height="22dp"
+            android:text="Вода"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            />
+        <TextView
+            android:layout_width="232dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="55dp"
+            android:text="Источник жизни"
 
+            />
 
 
     </LinearLayout>
 
-</LinearLayout>
+
+
+</FrameLayout>
