--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -9,6 +9,9 @@
     android:orientation="vertical"
     >
 
+
+
+    <!--ТУт старый рабочий код-->
     <FrameLayout
         android:layout_width="235dp"
         android:layout_height="165dp"
