--- a/app/src/main/res/layout/sales_layout.xml
+++ b/app/src/main/res/layout/sales_layout.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+    android:id="@+id/sales_constrant_layout"
+    >
 
     <ImageView
         android:id="@+id/item_Photo_ImageView"
