--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,13 +135,14 @@
                         android:layout_marginTop="8dp"
                         android:text="АКЦИИ" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/sales_linear_layout"
-                        android:orientation="vertical">
 
-                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/sales_linear_layout"
+                    android:orientation="vertical">
+
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -160,14 +161,15 @@
 
 
                             />
-                   <LinearLayout
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent"
-                       android:id="@+id/discounts_linear_layout"
-                       android:orientation="vertical"
-                       >
 
-                   </LinearLayout>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/discounts_linear_layout"
+                    android:orientation="vertical"
+                    >
 
                 </LinearLayout>
             </LinearLayout>
