--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -48,6 +48,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="25dp"
                 android:text="Источник жизни"
+                android:id="@+id/top_recyclerView_Desc"
 
                 />
 
