--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,39 +59,40 @@
         android:layout_height="wrap_content"
         android:background="@color/grey"
         android:elevation="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Top 10"
-            android:background="@drawable/rectngle"
-            android:layout_marginLeft="22dp"
-            android:layout_marginTop="17dp"
-            android:layout_marginRight="18dp"
-            android:layout_marginBottom="17dp"
 
-            />
         <TextView
+            android:id="@+id/top10_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Магазины"
+            android:layout_marginBottom="17dp"
+            android:layout_marginLeft="22dp"
+            android:layout_marginRight="18dp"
+            android:layout_marginTop="17dp"
             android:background="@drawable/rectngle"
+
+            android:text="Top 10" />
+
+        <TextView
+            android:id="@+id/shops_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="17dp"
+            android:background="@drawable/rectngle"
 
-            />
+            android:text="Магазины" />
 
         <TextView
+            android:id="@+id/goods_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Товары"
-            android:background="@drawable/rectngle"
             android:layout_gravity="right"
-            android:layout_marginTop="17dp"
             android:layout_marginRight="17dp"
+            android:layout_marginTop="17dp"
+            android:background="@drawable/rectngle"
 
 
-
-            />
+            android:text="Товары" />
 
 
     </FrameLayout>
@@ -117,7 +118,9 @@
                         android:id="@+id/top_horizontal_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:scrollbars="horizontal" />
+                        android:scrollbars="horizontal"
+                        android:nestedScrollingEnabled="false"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
@@ -164,12 +167,12 @@
 
 
                 </LinearLayout>
+
                 <LinearLayout
+                    android:id="@+id/other_linear_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/discounts_linear_layout"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
 
                 </LinearLayout>
             </LinearLayout>
