--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -1,54 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
 
 
-    android:orientation="vertical"
-    >
-
+    android:orientation="vertical">
 
 
     <!--ТУт старый рабочий код-->
     <FrameLayout
         android:layout_width="235dp"
         android:layout_height="165dp"
-        android:background="@drawable/list_picture_item"
-        android:elevation="7dp"
         >
-        <ImageView
-            android:id="@+id/top_recyclerView_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@mipmap/ic_launcher" />
+
+<android.support.v7.widget.CardView
+       app:cardCornerRadius="25dp"
+    android:elevation="7dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <ImageView
+        android:id="@+id/top_recyclerView_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@mipmap/ic_launcher"
+        />
+</android.support.v7.widget.CardView>
+
 
         <FrameLayout
-            android:layout_width="232dp"
+            android:layout_width="match_parent"
             android:layout_height="52dp"
-            android:background="@color/light_white"
-            android:visibility="visible"
-            android:elevation="10dp"
             android:layout_gravity="bottom"
-            >
+            android:background="@color/light_white"
+            android:elevation="10dp"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/top_recyclerView_Text"
                 android:layout_width="232dp"
                 android:layout_height="22dp"
-                android:text="Вода"
-                android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
-                />
+                android:layout_marginTop="10dp"
+                android:text="Вода" />
 
             <TextView
+                android:id="@+id/top_recyclerView_Desc"
                 android:layout_width="232dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="25dp"
                 android:text="Источник жизни"
-                android:id="@+id/top_recyclerView_Desc"
 
                 />
 
@@ -57,8 +61,6 @@
 
 
     </FrameLayout>
-
-
 
 
 </LinearLayout>
