--- a/app/src/main/res/layout/sales_layout.xml
+++ b/app/src/main/res/layout/sales_layout.xml
@@ -6,20 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:id="@+id/sales_constrant_layout"
+    android:paddingLeft="17dp"
+    android:paddingBottom="17dp"
+    android:paddingTop="17dp"
     >
-
+    <android.support.v7.widget.CardView
+        android:layout_width="119dp"
+        android:layout_height="87dp"
+        app:cardCornerRadius="10dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="17dp"
+        >
     <ImageView
         android:id="@+id/item_Photo_ImageView"
         android:layout_width="119dp"
         android:layout_height="87dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="18dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_round" />
-
+    </android.support.v7.widget.CardView>
     <TextView
         android:id="@+id/item_name_TextView"
         android:layout_width="119dp"
@@ -27,26 +36,25 @@
         android:layout_marginStart="17dp"
         android:layout_marginTop="1dp"
         android:text="Test Name"
-        app:layout_constraintStart_toEndOf="@+id/item_Photo_ImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/item_support_TextView"
+        android:id="@+id/item_group_TextView"
         android:layout_width="121dp"
         android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="test support text"
-        app:layout_constraintStart_toEndOf="@+id/item_Photo_ImageView"
         app:layout_constraintTop_toBottomOf="@+id/item_name_TextView" />
 
     <ImageView
         android:id="@+id/cart_imageView"
         android:layout_width="23dp"
         android:layout_height="23dp"
-        app:srcCompat="@android:drawable/ic_delete"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="156dp" />
+        android:layout_marginStart="152dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/images"
+        tools:layout_editor_absoluteY="81dp" />
 
     <TextView
         android:id="@+id/discount_ammount"
@@ -58,7 +66,7 @@
         tools:layout_editor_absoluteY="84dp" />
 
     <TextView
-        android:id="@+id/old_price"
+        android:id="@+id/old_old_price"
         android:layout_width="30dp"
         android:layout_height="16dp"
         android:layout_marginBottom="2dp"
