--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,14 +200,14 @@
 
                 </LinearLayout>
 
-                <LinearLayout
+                <FrameLayout
                     android:id="@+id/other_linear_layout"
                     android:layout_width="match_parent"
                     android:background="@color/grey"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                </LinearLayout>
+                </FrameLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
