--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,7 +144,7 @@
 
 
                 </LinearLayout>
-                <FrameLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/sales_linear_layout"
@@ -178,7 +178,7 @@
 
                     </android.support.constraint.ConstraintLayout>
 
-                </FrameLayout>
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -200,14 +200,14 @@
 
                 </LinearLayout>
 
-                <FrameLayout
+                <LinearLayout
                     android:id="@+id/other_linear_layout"
                     android:layout_width="match_parent"
                     android:background="@color/grey"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                </FrameLayout>
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
